﻿2009-10-29  Antonello Provenzano  <antonello@deveel.com>
	* DbController.cs:
		- implements IDatabaseHandler interface
		- it's possible to create a controller for a given
		path on the file-system
		- Default property now is created on the current
		executing directory.
		- implements IDisposable to dispose every database
		handled.
		- DatabaseExists method now accepts only the name
		argument
		- implementation of ConnectToDatabase to access
		an already created or booted database.
	
2009-10-23  Antonello Provenzano  <antonello@deveel.com>
	* DbSystem.cs: 
		- the IDbConnection returned from method
		GetConnection is now an internal DeveelDbConnection
		instance which is referenced by DbSystem (so that when
		this is closed or disposed all opened connections will 
		be closed accordingly).
		- DbSystem is now disposable: at disposal every connection
		opened through GetConnection method will also be closed.
	* IDbConfig.cs: added method SaveTo to save the configurations
	to a given path.
	* DbConfig.cs: implemented the method SaveTo and overloaded
	
2009-10-16  Antonello Provenzano  <antonello@deveel.com>
	* IDbConfig.cs:
		- inherits from ICloneable (removed the method
		ImmutableCopy)
		- added method Merge
		- inherits from IEnumerable (to traverse all the
		properties).
	* ConfigProperty.cs: promoted from DefaultDbConfig
	* DefaultDbConfig.cs:
		- method LoadFromStream moved to DbConfig