@@ -7,10 +7,31 @@ namespace Deveel.Data {
 	public sealed class OperatorTest {
 		[Test]
 		public void Add() {
-			Operator op = Operator.Get("=");
+			// NUMERIC
+			Operator op = Operator.Get("+");
 			TObject obj1 = 1, obj2 = 5;
 			TObject result = op.Evaluate(obj1, obj2, null, null, null);
 			Assert.IsTrue(result == 6);
+
+			// STRING
+			obj1 = "str1";
+			obj2 = "str2";
+			result = op.Evaluate(obj1, obj2, null, null, null);
+			Assert.IsTrue(result == "str1str2");
+
+			// TIME + NUMERIC
+			obj1 = new DateTime(2000, 12, 31);
+			obj2 = 1*24*60*60*1000;
+			result = op.Evaluate(obj1, obj2, null, null, null);
+			Assert.IsTrue(result == new DateTime(2001, 1, 1));
+		}
+
+		[Test]
+		public void Substract() {
+			Operator op = Operator.Get("-");
+			TObject obj1 = 1, obj2 = 5;
+			TObject result = op.Evaluate(obj2, obj1, null, null, null);
+			Assert.IsTrue(result == 4);
 		}
 	}
 }
